--- a/index.html
+++ b/index.html
@@ -448,20 +448,19 @@
                                             required
                                         ></textarea>
                                         <div class="send_bt">
-                                            <a
-                                                href=""
-                                                style="background: #a40514"
-                                                ><button
-                                                    type="submit"
-                                                    style="
-                                                        background: none;
-                                                        color: #fff;
-                                                        background: #a40514;
-                                                    "
-                                                >
-                                                    INVIA
-                                                </button></a
+                                            <button
+                                                type="submit"
+                                                style="
+                                                    width: 100%;
+                                                    padding: 20px 0px;
+                                                    border-radius: 45px;
+                                                    background: none;
+                                                    color: #fff;
+                                                    background: #a40514;
+                                                "
                                             >
+                                                INVIA
+                                            </button>
                                         </div>
                                     </div>
                                 </form>
